8165345: JDK macro definition re-defined by MacOS core framework

Reviewed-by: serb