jdk/src/java.desktop/share/native/libfontmanager/hb-jdk-font.cc
@@ -80,7 +80,7 @@ hb_jdk_get_glyph_h_advance (hb_font_t *font HB_UNUSED,
     fadv *= jdkFontInfo->devScale;
     env->DeleteLocalRef(pt);
 
-    return FloatToFixed(fadv);
+    return HBFloatToFixed(fadv);
 }
 
 static hb_position_t
@@ -107,7 +107,7 @@ hb_jdk_get_glyph_v_advance (hb_font_t *font HB_UNUSED,
     fadv = env->GetFloatField(pt, sunFontIDs.yFID);
     env->DeleteLocalRef(pt);
 
-    return FloatToFixed(fadv);
+    return HBFloatToFixed(fadv);
   
 }
 
@@ -201,8 +201,8 @@ hb_jdk_get_glyph_contour_point (hb_font_t *font HB_UNUSED,
         *x = 0; *y = 0;
         return true;
     }
-    *x = FloatToFixed(env->GetFloatField(pt, sunFontIDs.xFID));
-    *y = FloatToFixed(env->GetFloatField(pt, sunFontIDs.yFID));
+    *x = HBFloatToFixed(env->GetFloatField(pt, sunFontIDs.xFID));
+    *y = HBFloatToFixed(env->GetFloatField(pt, sunFontIDs.yFID));
     env->DeleteLocalRef(pt);
 
   return true;
@@ -321,8 +321,8 @@ static hb_font_t* _hb_jdk_font_create(JDKFontInfo *jdkFontInfo,
                        _hb_jdk_get_font_funcs (),
                        jdkFontInfo, (hb_destroy_func_t) _do_nothing);
     hb_font_set_scale (font,
-                      FloatToFixed(jdkFontInfo->ptSize*jdkFontInfo->devScale),
-                      FloatToFixed(jdkFontInfo->ptSize*jdkFontInfo->devScale));
+                      HBFloatToFixed(jdkFontInfo->ptSize*jdkFontInfo->devScale),
+                      HBFloatToFixed(jdkFontInfo->ptSize*jdkFontInfo->devScale));
   return font;
 }
 
@@ -339,8 +339,8 @@ static hb_font_t* _hb_jdk_ct_font_create(JDKFontInfo *jdkFontInfo) {
     hb_face_destroy(face);
 
     hb_font_set_scale(font,
-                     FloatToFixed(jdkFontInfo->ptSize),
-                     FloatToFixed(jdkFontInfo->ptSize));
+                     HBFloatToFixed(jdkFontInfo->ptSize),
+                     HBFloatToFixed(jdkFontInfo->ptSize));
     return font;
 }
 #endif
