jdk/src/java.desktop/share/native/libfontmanager/hb-jdk.h
@@ -49,8 +49,8 @@ typedef struct JDKFontInfo_Struct {
 
 
 // Use 16.16 for better precision than 26.6
-#define FloatToFixedScale ((float)(1 << 16))
-#define FloatToFixed(f) ((unsigned int)((f) * FloatToFixedScale))
+#define HBFloatToFixedScale ((float)(1 << 16))
+#define HBFloatToFixed(f) ((unsigned int)((f) * HBFloatToFixedScale))
 
 /*
  * Note:
